changes made on index page

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Hello!</h2>
-					<h3>Febrary 7th, 2020 New York, USA</h3>
+					<h3>Febrary 7th, 2020 Tamilnadu, India</h3>
 					<p>We invited you to celebrate our wedding</p>
 				</div>
 			</div>
@@ -131,7 +131,7 @@
 					</div>
 					<div class="desc-bride">
 						<h3>Saranya B.Sc</h3>
-						<p>House chief</p>
+						<p>House chef</p>
 					</div>
 				</div>
 			</div>
@@ -195,8 +195,8 @@
 			
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>We Except all your wishes</h2>
-					<p>kindly come and join our marriage function. We welcome you all.</p>
+					<h2>We Expect all your wishes</h2>
+					<p>kindly come and attend our marriage function. We welcome you all.</p>
 				</div>
 			</div>
 		</div>
@@ -209,7 +209,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
+						<small class="block">&copy; 2020 Aviproduction corporation. All Rights Reserved.</small>
 						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
 					</p>
 					<p>
