--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 				<div class="col-md-12 text-center">
 					<p>
 						<small class="block">&copy; 2020 Aviproduction corporation. All Rights Reserved.</small>
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">Designed by <a href="#" target="_blank">aviProduction.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
@@ -260,9 +260,9 @@
 
     // default example
     simplyCountdown('.simply-countdown-one', {
-        year: d.getFullYear(),
-        month: d.getMonth() + 1,
-        day: d.getDate()
+        year: 2020,
+        month: 2,
+        day: 7
     });
 
     //jQuery example
