save the date to actual date

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							<h1>Saravanan &amp; Saranya</h1>
 							<h2>We Are Getting Married</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
+							<p><a href="#" class="btn btn-default btn-sm">07/02/2020</a></p>
 						</div>
 					</div>
 				</div>
